--- a/index.html
+++ b/index.html
@@ -12,41 +12,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
   <main>
     <article>
-      <div>
-        <img src="assets/images/profile-picture.jpg" alt="avatar">
-      </div>
-      <div class="details">
-        <h1>Schindler Dumagat</h1>
-        <p class="address">Baguio City, Philippines</p>
-      </div>
-      <p class="characteristic">"Aspiring Software Engineer"</p>
-      <div class="socials">
-        <ul>
-          <li>
-            <a href="https://github.com/schindlerdumagat" target="_blank">GitHub</a>
-          </li>
-          <li>
-            <a href="https://www.frontendmentor.io/profile/schindlerdumagat" target="_blank">Frontend Mentor</a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/schindler-dumagat-015238230/" target="_blank">LinkedIn</a>
-          </li>
-          <li>
-            <a href="https://x.com/SchindlerD83787" target="_blank">Twitter</a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/dumagatschindler/" target="_blank">Instagram</a>
-          </li>
-        </ul>
-      </div>
+      <img src="assets/images/avatar-jessica.jpeg" alt="">
+      <h1>Jessica Randall</h1>
+      <p>London, United Kingdom</p>
+      <q>Front-end developer and avid reader.</q>
+      <ul>
+        <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+        <li><a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor</a></li>
+        <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
+        <li><a href="https://x.com/" target="_blank">Twitter</a></li>
+        <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+      </ul>
     </article>
   </main>
-
 </body>
 </html>
