Refactor code, Add class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <main>
-    <article>
+    <article class="card">
       <img src="assets/images/avatar-jessica.jpeg" alt="">
       <h1>Jessica Randall</h1>
       <p>London, United Kingdom</p>
